@@ -104,9 +104,15 @@ while ($row = mysql_fetch_array($res)){
 		echo "<div style='z-index: 1; color: #".$label_color."; position: absolute; margin-left: ".$pos_x."px; margin-top:".$pos_y."px; '>";
 		echo $link_string;
 		if ($status == 0){
-			echo "<img src='images/console/icons/".$image."_bad.png'>";	
+			if (($width != "") AND ($width != 0))
+				echo "<img src='images/console/icons/".$image."_bad.png' width='$width' height='$height' title='$label'>";
+			else
+				echo "<img src='images/console/icons/".$image."_bad.png' title='$label'>";	
 		} else {
-			echo "<img src='images/console/icons/".$image."_ok.png'>";	
+			if (($width != "") AND ($width != 0))
+				echo "<img src='images/console/icons/".$image."_ok.png' width='$width' height='$height' title='$label'>";
+			else
+				echo "<img src='images/console/icons/".$image."_ok.png' title='$label'>";	
 		}
 		echo "</A>";
 			
